@@ -447,9 +447,12 @@ template <typename Type> void run_test(const std::string &env_ipath, const std::
     ((VISP_HAVE_OPENCV_VERSION >= 0x030000) && defined(VISP_HAVE_OPENCV_XFEATURES2D) ||                                \
      (VISP_HAVE_OPENCV_VERSION >= 0x030411 && CV_MAJOR_VERSION < 4) || (VISP_HAVE_OPENCV_VERSION >= 0x040400))
   {
-#if !((VISP_HAVE_OPENCV_VERSION == 0x040504 || VISP_HAVE_OPENCV_VERSION == 0x040505) &&                                \
-      (defined(__APPLE__) && defined(__MACH__))) // OpenCV != 4.5.4 and 4.5.5 on macOS
-    std::string keypointName = "SIFT"; // SIFT is known unstable with OpenCV 4.5.4 and 4.5.5 on macOS (see #1048)
+#if (VISP_HAVE_OPENCV_VERSION != 0x040504) && (VISP_HAVE_OPENCV_VERSION != 0x040505) &&                                \
+    (VISP_HAVE_OPENCV_VERSION != 0x040600) && (defined(__APPLE__) && defined(__MACH__))
+    // SIFT is known to be unstable with OpenCV 4.5.4 and 4.5.5 on macOS (see #1048)
+    // Same for OpenCV 4.6.0 (see #1106) where it produces an Illegal Instruction error when OpenCV 4.6.0 is
+    // installed with brew. It seems working when OpenCV is build from source
+    std::string keypointName = "SIFT";
     keyPoints.setDetector(keypointName);
     keyPoints.setExtractor(keypointName);
 
